YAML-STANDAR/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi
spec:
  serviceName: 
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - image: localhost:5000/streaming_fastapi_image:1.0
          name: fastapi  
          ports:
            - containerPort: 80
