YAML-STANDAR/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
