YAML-STANDAR/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
