YAML-STANDAR/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: app2.kkherrazi.ip-ddns.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: api
              port:
                number: 80
